添加物品名称和描述的预解析